@@ -1,41 +1,18 @@
-buildscript {
-    repositories {
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
-    }
-    dependencies {
-        classpath "com.github.jengelman.gradle.plugins:shadow:6.0.0"
-        classpath "org.openjfx:javafx-plugin:0.0.8"
-    }
-}
-
 plugins {
     id 'java'
     id 'application'
     id 'checkstyle'
-    id "com.github.johnrengelman.shadow" version "6.0.0"
-    id 'org.openjfx.javafxplugin' version '0.0.8'
+    id 'com.github.johnrengelman.shadow' version '6.0.0'
 }
 
 repositories {
     mavenCentral()
 }
 
-checkstyle {
-    toolVersion = '8.36'
-}
-//--module-path /Users/amberhe/Desktop/CS2103T/IndividualProject/javafx-sdk-11.0.2/lib --add-modules javafx.controls,javafx.fxml
-
-//dependencies {
-//
-//}
-
 dependencies {
-
-
-    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.5.0'
-    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.5.0'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.6.2'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.6.2'
+    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.6.2'
 
     String javaFxVersion = '11'
 
@@ -51,22 +28,13 @@ dependencies {
     implementation group: 'org.openjfx', name: 'javafx-graphics', version: javaFxVersion, classifier: 'win'
     implementation group: 'org.openjfx', name: 'javafx-graphics', version: javaFxVersion, classifier: 'mac'
     implementation group: 'org.openjfx', name: 'javafx-graphics', version: javaFxVersion, classifier: 'linux'
-    implementation group: 'org.openjfx', name: 'javafx-scene', version: javaFxVersion, classifier: 'win'
-    implementation group: 'org.openjfx', name: 'javafx-scene', version: javaFxVersion, classifier: 'mac'
-    implementation group: 'org.openjfx', name: 'javafx-scene', version: javaFxVersion, classifier: 'linux'
-    implementation group: 'org.openjfx', name: 'javafx-application', version: javaFxVersion, classifier: 'win'
-    implementation group: 'org.openjfx', name: 'javafx-application', version: javaFxVersion, classifier: 'mac'
-    implementation group: 'org.openjfx', name: 'javafx-application', version: javaFxVersion, classifier: 'linux'
-    implementation group: 'org.openjfx', name: 'javafx-stage', version: javaFxVersion, classifier: 'win'
-    implementation group: 'org.openjfx', name: 'javafx-stage', version: javaFxVersion, classifier: 'mac'
-    implementation group: 'org.openjfx', name: 'javafx-stage', version: javaFxVersion, classifier: 'linux'
-
 }
 
-javafx {
-    version = "11.0.2"
-    modules = [ 'javafx.base', 'javafx.controls', 'javafx.fxml', 'javafx.graphics']
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
 }
+
+applicationDefaultJvmArgs = ["-Dfile.encoding=utf-8"]
 
 test {
     useJUnitPlatform()
@@ -78,11 +46,9 @@ test {
         exceptionFormat "full"
         showCauses true
         showStackTraces true
-        showStandardStreams = false
+        showStandardStreams = true
     }
-
 }
-
 
 application {
     mainClassName = "duke.Launcher"
@@ -90,18 +56,15 @@ application {
 
 shadowJar {
     archiveBaseName = "duke"
-    // archiveClassifier = null
-    archiveClassifier = 'v.0.1'
+    archiveClassifier = null
+}
+
+checkstyle {
+    toolVersion = '8.36'
 }
 
 run{
+    enableAssertions = true
     standardInput = System.in
 }
-
-
-
-apply plugin: "org.openjfx.javafxplugin"
-apply plugin: "com.github.johnrengelman.shadow"
-
-
 
